--- a/public/index.html
+++ b/public/index.html
@@ -113,7 +113,7 @@
 				
 				<section class="list-item">
 					<h1 class="title"><a href="/blog/posts/diagramme/">Diagramme</a></h1>
-					<time>Mar 30, 2025 <span class="draft-label">DRAFT</span> </time>
+					<time>Mar 30, 2025</time>
 					<br><div class="description">
 	
 	<pre class="mermaid">
